--- a/examples/my-project-dir/project.json
+++ b/examples/my-project-dir/project.json
@@ -1,13 +1,8 @@
 {
-  "id": "my-project",
+  "id": "my-project-2",
   "name": "My Project",
   "description": "My project",
-  "models": {
-    "base": {
-      "model": "anthropic/claude-sonnet-4-20250514",
-      "providerOptions": {}
-    }
-  },
+  "models": "http://localhost:3003",
   "graphs": {
     "basic-graph": {
       "id": "basic-graph",
@@ -20,13 +15,6 @@
           "name": "Goodbye Agent",
           "description": "A goodbye agent",
           "prompt": "You are a goodbye agent that just says goodbye. You only reply with the word \"goodbye\", but you may do it in different variations like g00dby3, g00dby3w0rld, g00dby3w0rld! etc...",
-          "models": {
-            "base": {
-              "model": "anthropic/claude-sonnet-4-20250514",
-              "providerOptions": {}
-            }
-          },
-          "stopWhen": null,
           "canTransferTo": [
             "hello-agent",
             "goodbye-agent"
@@ -35,42 +23,26 @@
             "hello-agent",
             "goodbye-agent"
           ],
-          "dataComponents": [],
-          "artifactComponents": [],
-          "canUse": []
+          "canUse": [],
+          "type": "internal"
         },
         "hello-agent": {
           "id": "hello-agent",
           "name": "Hello Agent",
           "description": "A basic agent",
           "prompt": "You are a basic agent that just says hello. You only reply with the word \"hello\", but you may do it in different variations like h3110, h3110w0rld, h3110w0rld! etc...",
-          "models": {
-            "base": {
-              "model": "anthropic/claude-sonnet-4-20250514",
-              "providerOptions": {}
-            }
-          },
-          "stopWhen": null,
           "canTransferTo": [],
           "canDelegateTo": [],
-          "dataComponents": [],
-          "artifactComponents": [],
-          "canUse": []
+          "canUse": [],
+          "type": "internal"
         }
       },
-      "createdAt": "2025-09-22T22:42:24.572Z",
-      "updatedAt": "2025-09-23T06:17:29.501Z",
-      "models": {
-        "base": {
-          "model": "anthropic/claude-sonnet-4-20250514",
-          "providerOptions": {}
-        }
-      }
+      "createdAt": "2025-09-23T22:22:55.463Z",
+      "updatedAt": "2025-09-23T22:22:55.464Z"
     },
     "weather-graph": {
       "id": "weather-graph",
-      "name": "Weather graph",
-      "description": null,
+      "name": "Weather graph 2",
       "defaultAgentId": "weather-assistant",
       "agents": {
         "geocoder-agent": {
@@ -78,94 +50,53 @@
           "name": "Geocoder agent",
           "description": "Responsible for converting location or address into coordinates",
           "prompt": "You are a helpful assistant responsible for converting location or address into coordinates using your geocode tool",
-          "models": {
-            "base": {
-              "model": "anthropic/claude-sonnet-4-20250514",
-              "providerOptions": {}
-            }
-          },
-          "stopWhen": null,
           "canTransferTo": [],
           "canDelegateTo": [],
-          "dataComponents": [],
-          "artifactComponents": [],
           "canUse": [
             {
               "toolId": "fdxgfv9HL7SXlfynPx8hf",
               "toolSelection": null
             }
-          ]
+          ],
+          "type": "internal"
         },
         "weather-assistant": {
           "id": "weather-assistant",
           "name": "Weather assistant",
           "description": "This component is used to render a group of times in a day along with the weather temperature (in Farenheit) and condition at give times.",
           "prompt": "You are a helpful assistant. When the user asks about the weather in a given location, first ask the geocoder agent for the coordinates, and then pass those coordinates to the weather forecast agent to get the weather forecast",
-          "models": {
-            "base": {
-              "model": "anthropic/claude-sonnet-4-20250514",
-              "providerOptions": {}
-            }
-          },
-          "stopWhen": null,
           "canTransferTo": [],
           "canDelegateTo": [
             "weather-forecaster",
             "geocoder-agent"
           ],
+          "canUse": [],
           "dataComponents": [
-            "weather-forecast"
+            "weatherforecast"
           ],
-          "artifactComponents": [],
-          "canUse": []
+          "type": "internal"
         },
         "weather-forecaster": {
           "id": "weather-forecaster",
           "name": "Weather forecaster",
           "description": "This agent is responsible for taking in coordinates and returning the forecast for the weather at that location",
           "prompt": "You are a helpful assistant responsible for taking in coordinates and returning the forecast for that location using your forecasting tool",
-          "models": {
-            "base": {
-              "model": "anthropic/claude-sonnet-4-20250514",
-              "providerOptions": {}
-            }
-          },
-          "stopWhen": null,
           "canTransferTo": [],
           "canDelegateTo": [],
-          "dataComponents": [],
-          "artifactComponents": [],
           "canUse": [
             {
               "toolId": "fUI2riwrBVJ6MepT8rjx0",
               "toolSelection": null
             }
-          ]
+          ],
+          "type": "internal"
         }
       },
-      "createdAt": "2025-09-22T22:42:24.591Z",
-      "updatedAt": "2025-09-23T06:17:29.501Z",
-      "models": {
-        "base": {
-          "model": "anthropic/claude-sonnet-4-20250514",
-          "providerOptions": {}
-        }
-      }
+      "createdAt": "2025-09-23T22:22:55.464Z",
+      "updatedAt": "2025-09-23T22:22:55.464Z"
     }
   },
   "tools": {
-    "fUI2riwrBVJ6MepT8rjx0": {
-      "id": "fUI2riwrBVJ6MepT8rjx0",
-      "name": "Forecast weather",
-      "config": {
-        "type": "mcp",
-        "mcp": {
-          "server": {
-            "url": "https://weather-forecast-mcp.vercel.app/mcp"
-          }
-        }
-      }
-    },
     "fdxgfv9HL7SXlfynPx8hf": {
       "id": "fdxgfv9HL7SXlfynPx8hf",
       "name": "Geocode address",
@@ -176,12 +107,26 @@
             "url": "https://geocoder-mcp.vercel.app/mcp"
           }
         }
-      }
+      },
+      "status": "unknown"
+    },
+    "fUI2riwrBVJ6MepT8rjx0": {
+      "id": "fUI2riwrBVJ6MepT8rjx0",
+      "name": "Forecast weather",
+      "config": {
+        "type": "mcp",
+        "mcp": {
+          "server": {
+            "url": "https://weather-forecast-mcp.vercel.app/mcp"
+          }
+        }
+      },
+      "status": "unknown"
     }
   },
   "dataComponents": {
-    "weather-forecast": {
-      "id": "weather-forecast",
+    "weatherforecast": {
+      "id": "weatherforecast",
       "name": "WeatherForecast",
       "description": "A hourly forecast for the weather at a given location",
       "props": {
@@ -223,9 +168,6 @@
       }
     }
   },
-  "artifactComponents": {},
-  "contextConfig": {},
-  "credentialReferences": {},
-  "createdAt": "2025-09-19T02:17:55.108Z",
-  "updatedAt": "2025-09-23T06:17:29.493Z"
+  "createdAt": "2025-09-23T22:22:55.464Z",
+  "updatedAt": "2025-09-23T22:22:55.464Z"
 }
