chore: fix build

--- a/agents-manage-ui/.gitignore
+++ b/agents-manage-ui/.gitignore
@@ -36,7 +36,9 @@ yarn-error.log*
 !.env.example
 
 # vercel
-.vercel
+.vercel/output
+.vercel/auth.json
+.vercel/config.json
 
 # typescript
 *.tsbuildinfo
