--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -54,7 +54,6 @@
     "ora": "^8.0.1",
     "picocolors": "^1.1.1",
     "pino": "^9.11.0",
-    "pino-pretty": "^13.1.1",
     "recast": "^0.23.0",
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.5"
@@ -67,7 +66,8 @@
     "@vitest/coverage-v8": "^3.2.4",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "pino-pretty": "^13.1.1"
   },
   "peerDependencies": {
     "zod": "^4.1.5"
