--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -68,6 +68,7 @@
     "keytar": "^7.9.0",
     "nanoid": "^5.0.9",
     "pino": "^9.11.0",
+    "pino-pretty": "^13.1.1",
     "ts-pattern": "^5.7.1",
     "zod": "^4.1.5"
   },
@@ -79,8 +80,7 @@
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.19.2",
     "typescript": "^5.9.2",
-    "vitest": "^3.1.4",
-    "pino-pretty": "^13.1.1"
+    "vitest": "^3.1.4"
   },
   "engines": {
     "node": ">=22.0.0"
