use NANGO_SERVER_URL instead of NANGO_HOST

--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,7 @@ GOOGLE_GENERATIVE_AI_API_KEY=
 # ============ THIRD PARTY SERVICES ============
 # Nango (for OAuth integrations)
 NANGO_SECRET_KEY=
-NANGO_HOST=http://localhost:3050
+NANGO_SERVER_URL=http://localhost:3050
 NANGO_CONNECT_BASE_URL=http://localhost:3051
 
 SIGNOZ_URL=http://localhost:3080
