--- a/agents-manage-api/.env.example
+++ b/agents-manage-api/.env.example
@@ -2,7 +2,7 @@ ENVIRONMENT=development
 DB_FILE_NAME=file:../local.db
 
 NANGO_SECRET_KEY=
-NANGO_HOST="http://localhost:3050"
+NANGO_SERVER_URL="http://localhost:3050"
 
 # MCP OAuth Configuration
 DEFAULT_OAUTH_CLIENT_ID=mcp-client
