--- a/agents-manage-ui/.env.example
+++ b/agents-manage-ui/.env.example
@@ -7,6 +7,6 @@ INKEEP_AGENTS_RUN_API_BYPASS_SECRET=""
 SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=
 
-NANGO_HOST="http://localhost:3050"
+NANGO_SERVER_URL="http://localhost:3050"
 NANGO_CONNECT_BASE_URL="http://localhost:3051"
 NANGO_SECRET_KEY=
