--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -16,6 +16,7 @@
     "validate-link": "node scripts/validate-link.mjs"
   },
   "dependencies": {
+    "@inkeep/cxkit-react": "^0.5.98",
     "@inkeep/docskit": "^0.0.6",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -46,7 +47,8 @@
     "shiki": "^3.3.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
