--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -18,7 +18,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev --turbopack -p 3000",
     "build:sync": "cp -r public .next/standalone/agents-manage-ui && mkdir -p .next/standalone/agents-manage-ui/.next/ && cp -r .next/static .next/standalone/agents-manage-ui/.next/static",
     "build": "next build && pnpm build:sync",
     "build:vercel": "vercel build",
@@ -70,7 +70,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "nanoid": "^5.1.5",
-    "next": "15.4.7",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pino": "^9.9.0",
