--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -61,6 +61,7 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
+  "packageManager": "pnpm@10.11.0",
   "engines": {
     "node": ">=22.0.0"
   }
