--- a/packages/agents-core/clean-package.config.json
+++ b/packages/agents-core/clean-package.config.json
@@ -2,10 +2,22 @@
   "replace": {
     "main": "dist/index.js",
     "exports": {
-      ".": "./dist/index.js",
-      "./schema": "./dist/schema/index.js",
-      "./types": "./dist/types/index.js",
-      "./validation": "./dist/validation/index.js",
+      ".": {
+        "types": "./dist/index.d.ts",
+        "import": "./dist/index.js"
+      },
+      "./schema": {
+        "types": "./dist/db/schema.d.ts",
+        "import": "./dist/db/schema.js"
+      },
+      "./types": {
+        "types": "./dist/types/index.d.ts",
+        "import": "./dist/types/index.js"
+      },
+      "./validation": {
+        "types": "./dist/validation/index.d.ts",
+        "import": "./dist/validation/index.js"
+      },
       "./client-exports": {
         "types": "./dist/client-exports.d.ts",
         "import": "./dist/client-exports.js"
