--- a/packages/agents-core/clean-package.config.json
+++ b/packages/agents-core/clean-package.config.json
@@ -1,6 +1,7 @@
 {
   "replace": {
     "main": "dist/index.js",
+    "types": "./dist/index.d.ts",
     "exports": {
       ".": {
         "types": "./dist/index.d.ts",
