--- a/packages/agents-sdk/clean-package.config.json
+++ b/packages/agents-sdk/clean-package.config.json
@@ -3,7 +3,10 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "exports": {
-      ".": "./dist/index.js",
+      ".": {
+        "types": "./dist/index.d.ts",
+        "import": "./dist/index.js"
+      },
       "./package.json": "./package.json"
     }
   }
