--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -38,6 +38,7 @@
     "@clack/prompts": "^0.11.0",
     "@inkeep/agents-core": "workspace:^",
     "@inkeep/agents-manage-ui": "workspace:^",
+    "@inkeep/agents-sdk": "workspace:^",
     "@libsql/client": "^0.15.7",
     "ai": "5.0.11",
     "ast-types": "^0.14.2",
