--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -65,6 +65,7 @@
     "find-up": "^7.0.0",
     "hono": "^4.9.7",
     "jmespath": "^0.16.0",
+    "keytar": "^7.9.0",
     "nanoid": "^5.0.9",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
