--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -59,12 +59,14 @@
     "fetch-to-node": "^2.1.0",
     "hono": "^4.9.7",
     "jmespath": "^0.16.0",
-    "keytar": "^7.9.0",
     "nanoid": "^5.1.5",
     "pino": "^9.11.0",
     "traverse": "^0.6.11",
     "ts-pattern": "^5.7.1",
     "zod": "^4.1.5"
+  },
+  "optionalDependencies": {
+    "keytar": "^7.9.0"
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.20.1",
