--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -65,12 +65,14 @@
     "find-up": "^7.0.0",
     "hono": "^4.9.7",
     "jmespath": "^0.16.0",
-    "keytar": "^7.9.0",
     "nanoid": "^5.0.9",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
     "ts-pattern": "^5.7.1",
     "zod": "^4.1.5"
+  },
+  "optionalDependencies": {
+    "keytar": "^7.9.0"
   },
   "devDependencies": {
     "@types/jmespath": "^0.15.2",
