--- a/packages/create-agents/package.json
+++ b/packages/create-agents/package.json
@@ -42,7 +42,8 @@
     "commander": "^12.0.0",
     "degit": "^2.8.4",
     "fs-extra": "^11.0.0",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "drizzle-kit": "^0.31.5"
   },
   "devDependencies": {
     "@types/degit": "^2.8.6",
