--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -41,7 +41,9 @@
   },
   "dependencies": {
     "@ai-sdk/react": "2.0.11",
+    "@codemirror/autocomplete": "^6.19.0",
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/view": "^6.38.4",
     "@hookform/resolvers": "^5.2.1",
     "@inkeep/agents-core": "workspace:^",
     "@inkeep/agents-manage-api": "workspace:^",
