--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "dependencies": {
     "npm-run-all": "^4.1.5",
     "tsup": "^8.5.0",
-    "zod": "4.0.17"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
