--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -48,8 +48,7 @@
     "shiki": "^3.3.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.11",
-    "zod-to-json-schema": "^3.24.6"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
