--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -36,6 +36,7 @@
     "@babel/parser": "^7.23.0",
     "@babel/types": "^7.23.0",
     "@clack/prompts": "^0.11.0",
+    "@inkeep/agents-sdk": "workspace:^",
     "@inkeep/agents-core": "workspace:^",
     "@libsql/client": "^0.15.7",
     "ai": "5.0.11",
