--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -38,14 +38,14 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest --run",
     "test:coverage": "vitest --run --coverage",
-    "test:e2e": "cypress run",
+    "test:e2e": "cypress open",
     "test:e2e:ci": "cypress run --browser chrome --headless"
   },
   "dependencies": {
-    "@codemirror/lint": "^6.8.5",
     "@ai-sdk/react": "2.0.11",
     "@codemirror/autocomplete": "^6.19.0",
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lint": "^6.8.5",
     "@codemirror/view": "^6.38.4",
     "@hookform/resolvers": "^5.2.1",
     "@inkeep/agents-core": "workspace:^",
@@ -104,7 +104,6 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "cypress": "^15.3.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -113,6 +112,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/coverage-v8": "^3.2.4",
+    "cypress": "^15.3.0",
     "jsdom": "^26.1.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
