--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -39,7 +39,7 @@
     "test": "vitest --run",
     "test:coverage": "vitest --run --coverage",
     "test:e2e": "cypress open",
-    "test:e2e:ci": "cypress run --browser chrome --headless"
+    "test:e2e:ci": "cypress run --headless"
   },
   "dependencies": {
     "@ai-sdk/react": "2.0.11",
