--- a/.github/composite-actions/cypress-e2e/action.yml
+++ b/.github/composite-actions/cypress-e2e/action.yml
@@ -22,10 +22,12 @@ runs:
         restore-keys: ${{ runner.os }}-cypress-
 
     - name: Install Cypress binary
+      shell: bash
       run: cd agents-manage-ui && npx cypress install
 
     # Start the backend API server
     - name: Start Backend API Server
+      shell: bash
       run: |
         pnpm --filter @inkeep/agents-manage-api dev &
         echo $! > backend.pid
@@ -33,13 +35,14 @@ runs:
         TURBO_TELEMETRY_DISABLED: 1
         TURBO_CACHE_DIR: .turbo
         ENVIRONMENT: test
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || 'sk-test-key-for-ci-testing' }}
-        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || 'sk-ant-test-key-for-ci-testing' }}
+        OPENAI_API_KEY: ${{ env.OPENAI_API_KEY || 'sk-test-key-for-ci-testing' }}
+        ANTHROPIC_API_KEY: ${{ env.ANTHROPIC_API_KEY || 'sk-ant-test-key-for-ci-testing' }}
         DB_FILE_NAME: test.db
         NODE_OPTIONS: --max-old-space-size=4096
 
     # Start the frontend development server
     - name: Start Frontend Development Server
+      shell: bash
       run: |
         pnpm --filter @inkeep/agents-manage-ui dev &
         echo $! > frontend.pid
@@ -50,12 +53,14 @@ runs:
 
     # Wait for services to be ready
     - name: Wait for Backend API Server
+      shell: bash
       run: |
         echo "Waiting for backend API server to be ready..."
         timeout 60 bash -c 'until curl -f http://localhost:3002/health 2>/dev/null; do sleep 2; done'
         echo "Backend API server is ready!"
 
     - name: Wait for Frontend Development Server
+      shell: bash
       run: |
         echo "Waiting for frontend development server to be ready..."
         timeout 60 bash -c 'until curl -f http://localhost:3000 2>/dev/null; do sleep 2; done'
@@ -63,6 +68,7 @@ runs:
 
     # Run Cypress e2e tests
     - name: Run Cypress E2E Tests
+      shell: bash
       run: pnpm --filter @inkeep/agents-manage-ui test:e2e:ci
       env:
         TURBO_TELEMETRY_DISABLED: 1
@@ -73,6 +79,7 @@ runs:
     # Cleanup: Stop the services
     - name: Stop Services
       if: always()
+      shell: bash
       run: |
         echo "Stopping services..."
         if [ -f backend.pid ]; then
@@ -106,6 +113,7 @@ runs:
     # Create summary report
     - name: Create E2E Test Summary
       if: always()
+      shell: bash
       run: |
         echo "## Cypress E2E Test Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
