disable husky in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,8 @@ jobs:
           pnpm install --frozen-lockfile
           # Ensure agents-manage-ui dependencies are properly installed
           cd agents-manage-ui && pnpm install --frozen-lockfile && cd ..
+        env:
+          HUSKY: 0
       
       # Clean database files before running tests
       - name: Clean database files
@@ -89,6 +91,7 @@ jobs:
           DB_FILE_NAME: test.db
           NODE_OPTIONS: --max-old-space-size=4096
           CI: true
+          HUSKY: 0
       
       # Create summary report
       - name: Create CI Summary
