--- a/packages/agents-core/clean-package.config.json
+++ b/packages/agents-core/clean-package.config.json
@@ -23,6 +23,7 @@
         "types": "./dist/client-exports.d.ts",
         "import": "./dist/client-exports.js"
       },
+      "./drizzle": "./drizzle/",
       "./package.json": "./package.json"
     }
   }
