--- a/packages/agents-sdk/package.json
+++ b/packages/agents-sdk/package.json
@@ -23,6 +23,7 @@
     "esbuild": "^0.25.10",
     "js-yaml": "^4.1.0",
     "nanoid": "^5.1.5",
+    "prettier": "^3.4.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
