--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -40,6 +40,7 @@
     "test:coverage": "vitest --run --coverage"
   },
   "dependencies": {
+    "monaco-editor": "^0.54.0",
     "@codemirror/lint": "^6.8.5",
     "@ai-sdk/react": "2.0.11",
     "@codemirror/autocomplete": "^6.19.0",
