--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
   "pnpm": {
     "overrides": {
       "zod": "^4.1.11"
+    },
+    "patchedDependencies": {
+      "@changesets/assemble-release-plan@6.0.9": "patches/@changesets__assemble-release-plan.patch"
     }
   }
 }
