fix changesets unexpected bumps to a major version

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
-    "@changesets/cli": "^2.29.6",
+    "@changesets/cli": "2.29.7",
     "drizzle-kit": "^0.31.5",
     "husky": "^9.1.6",
     "lint-staged": "^16.1.5",
@@ -83,11 +83,10 @@
   },
   "pnpm": {
     "overrides": {
-      "@changesets/assemble-release-plan": "6.0.8",
       "zod": "^4.1.11"
     },
     "patchedDependencies": {
-      "@changesets/assemble-release-plan@6.0.8": "patches/@changesets__assemble-release-plan.patch"
+      "@changesets/assemble-release-plan@6.0.9": "patches/@changesets__assemble-release-plan.patch"
     }
   }
 }
