--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -40,16 +40,16 @@
     "test:coverage": "vitest --run --coverage"
   },
   "dependencies": {
-    "@codemirror/lint": "^6.8.5",
     "@ai-sdk/react": "2.0.11",
     "@codemirror/autocomplete": "^6.19.0",
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lint": "^6.8.5",
     "@codemirror/view": "^6.38.4",
     "@hookform/resolvers": "^5.2.1",
     "@inkeep/agents-core": "workspace:^",
     "@inkeep/agents-manage-api": "workspace:^",
     "@inkeep/agents-run-api": "workspace:^",
-    "@inkeep/cxkit-react-oss": "0.5.107",
+    "@inkeep/agents-ui": "^0.14.10",
     "@lezer/highlight": "^1.2.1",
     "@nangohq/frontend": "^0.66.0",
     "@nangohq/node": "^0.66.0",
