--- a/agents-ui/package.json
+++ b/agents-ui/package.json
@@ -14,7 +14,7 @@
     "test": "echo 'No tests configured for chat-widget'"
   },
   "dependencies": {
-    "@inkeep/cxkit-react-oss": "0.5.107",
+    "@inkeep/agents-ui": "^0.14.10",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
