--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -40,6 +40,7 @@
     "test:coverage": "vitest --run --coverage"
   },
   "dependencies": {
+    "monaco-editor": "0.54.0",
     "@ai-sdk/react": "2.0.11",
     "@codemirror/autocomplete": "^6.19.0",
     "@codemirror/lang-json": "^6.0.2",
@@ -102,6 +103,8 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@vitest/web-worker": "3.1.4",
+    "vitest-canvas-mock": "^0.3.3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
