--- a/packages/agents-core/clean-package.config.json
+++ b/packages/agents-core/clean-package.config.json
@@ -23,6 +23,10 @@
         "types": "./dist/client-exports.d.ts",
         "import": "./dist/client-exports.js"
       },
+      "./constants/models": {
+        "types": "./dist/constants/models.d.ts",
+        "import": "./dist/constants/models.js"
+      },
       "./utils/schema-conversion": {
         "types": "./dist/utils/schema-conversion.d.ts",
         "import": "./dist/utils/schema-conversion.js"
