--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -13,6 +13,9 @@
       "models": {
         "deepseek-r1:1.5b": {
           "name": "DeepSeek R1 1.5B"
+        },
+        "qwen3-coder:30b": {
+          "name": "Qwen3 Coder 30B"
         }
       }
     }
