--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "dev": "next dev --turbo -p 3010",
     "start": "next start",
     "lint": "biome lint",
