Add client side env vars prefixed with PUBLIC_

--- a/.env.example
+++ b/.env.example
@@ -27,9 +27,11 @@ DB_FILE_NAME=
 # ============ API ENDPOINTS ============
 # Management API (CRUD operations, configuration)
 INKEEP_AGENTS_MANAGE_API_URL=http://localhost:3002
+PUBLIC_INKEEP_AGENTS_MANAGE_API_URL=http://localhost:3002
 
 # Run API (chat completions, agent execution)
 INKEEP_AGENTS_RUN_API_URL=http://localhost:3003
+PUBLIC_INKEEP_AGENTS_RUN_API_URL=http://localhost:3003
 
 # ============ TENANT CONFIGURATION ============
 # Default tenant ID for development
@@ -48,9 +50,11 @@ GOOGLE_GENERATIVE_AI_API_KEY=
 # Nango (for OAuth integrations)
 NANGO_SECRET_KEY=
 NANGO_SERVER_URL=http://localhost:3050
-NANGO_CONNECT_BASE_URL=http://localhost:3051
+PUBLIC_NANGO_SERVER_URL=http://localhost:3050
+PUBLIC_NANGO_CONNECT_BASE_URL=http://localhost:3051
 
 SIGNOZ_URL=http://localhost:3080
+PUBLIC_SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:14318/v1/traces
 OTEL_SERVICE_NAME=inkeep-agents
