--- a/agents-manage-ui/.env.example
+++ b/agents-manage-ui/.env.example
@@ -1,12 +1,20 @@
-TENANT_ID="default"
+TENANT_ID=default
 
-INKEEP_AGENTS_MANAGE_API_URL="http://localhost:3002" # URL where agents-manage-api is running  
-INKEEP_AGENTS_RUN_API_URL="http://localhost:3003" # URL where agents-run-api is running
-INKEEP_AGENTS_RUN_API_BYPASS_SECRET=""
+# URL where agents-manage-api is running  
+INKEEP_AGENTS_MANAGE_API_URL=http://localhost:3002
+PUBLIC_INKEEP_AGENTS_MANAGE_API_URL=http://localhost:3002
+
+# URL where agents-run-api is running
+INKEEP_AGENTS_RUN_API_URL=http://localhost:3003
+PUBLIC_INKEEP_AGENTS_RUN_API_URL=http://localhost:3003
+
+PUBLIC_INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
 
 SIGNOZ_URL=http://localhost:3080
+PUBLIC_SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=
 
-NANGO_SERVER_URL="http://localhost:3050"
-NANGO_CONNECT_BASE_URL="http://localhost:3051"
+NANGO_SERVER_URL=http://localhost:3050
+PUBLIC_NANGO_SERVER_URL=http://localhost:3050
+PUBLIC_NANGO_CONNECT_BASE_URL=http://localhost:3051
 NANGO_SECRET_KEY=
