--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -68,6 +68,7 @@
     "find-up": "^7.0.0",
     "hono": "^4.9.7",
     "jmespath": "^0.16.0",
+    "jose": "^6.1.0",
     "nanoid": "^5.0.9",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
