--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -41,9 +41,9 @@
     "test:coverage": "vitest --run --coverage"
   },
   "dependencies": {
-    "monaco-editor": "0.54.0",
     "@ai-sdk/react": "2.0.11",
     "@codemirror/autocomplete": "^6.19.0",
+    "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lint": "^6.8.5",
     "@codemirror/view": "^6.38.4",
@@ -68,6 +68,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sinclair/typebox": "^0.34.40",
     "@types/dagre": "^0.7.53",
@@ -82,6 +83,7 @@
     "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
+    "monaco-editor": "0.54.0",
     "nanoid": "^5.1.5",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -94,18 +96,17 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^3.0.5",
+    "react-runner": "^1.0.5",
     "recharts": "2.15.4",
     "remark-supersub": "^1.0.0",
     "sonner": "^2.0.6",
-    "streamdown": "^1.0.12",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@vitest/web-worker": "3.1.4",
-    "vitest-canvas-mock": "^0.3.3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -114,12 +115,14 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/web-worker": "3.1.4",
     "jsdom": "^26.1.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vitest-canvas-mock": "^0.3.3"
   },
   "engines": {
     "node": ">=22.0.0"
