--- a/.env.docker.example
+++ b/.env.docker.example
@@ -31,3 +31,7 @@ SIGNOZ_API_KEY=
 # PUBLIC_NANGO_SERVER_URL=http://<vm_external_ip>:3050
 # PUBLIC_NANGO_CONNECT_BASE_URL=http://<vm_external_ip>:3051
 # PUBLIC_SIGNOZ_URL=http://<vm_external_ip>:3080
+
+# Modify these in production environments!
+# INKEEP_AGENTS_MANAGE_UI_USERNAME=admin@example.com
+# INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
