--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - PUBLIC_SIGNOZ_URL=${PUBLIC_SIGNOZ_URL:-http://localhost:3080}
       - SIGNOZ_URL=${SIGNOZ_URL:-http://host.docker.internal:3080}
       - SIGNOZ_API_KEY
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     depends_on:
       inkeep-agents-migrate:
         condition: service_completed_successfully
@@ -79,5 +79,27 @@ services:
     volumes:
       - inkeep-agents-db:/inkeep-agents/db
     restart: "no"
+  inkeep-agents-manage-ui-protected:
+    image: nginx:alpine
+    environment:
+      - INKEEP_AGENTS_MANAGE_UI_USERNAME=${INKEEP_AGENTS_MANAGE_UI_USERNAME:-admin@example.com}
+      - INKEEP_AGENTS_MANAGE_UI_PASSWORD=${INKEEP_AGENTS_MANAGE_UI_PASSWORD:-adminADMIN!@12}
+    ports:
+      - "3000:80"
+    depends_on:
+      - inkeep-agents-manage-ui
+    command: >
+      /bin/sh -c "
+        apk add --no-cache apache2-utils &&
+        htpasswd -bc /etc/nginx/.htpasswd $${INKEEP_AGENTS_MANAGE_UI_USERNAME} $${INKEEP_AGENTS_MANAGE_UI_PASSWORD} &&
+        echo 'events {} http { server { listen 80;
+          location / {
+            auth_basic \"Restricted\";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+            proxy_pass http://inkeep-agents-manage-ui:3000;
+          }
+        } }' > /etc/nginx/nginx.conf &&
+        nginx -g 'daemon off;'
+      "
 volumes:
   inkeep-agents-db:
