--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -41,6 +41,10 @@
     "@inkeep/agents-core": "workspace:^",
     "@inkeep/agents-sdk": "workspace:^",
     "@libsql/client": "^0.15.7",
+    "@opentelemetry/api-logs": "^0.206.0",
+    "@opentelemetry/instrumentation": "^0.206.0",
+    "@opentelemetry/sdk-logs": "^0.206.0",
+    "@vercel/otel": "^2.0.1",
     "ai": "5.0.11",
     "ast-types": "^0.14.2",
     "chalk": "^5.3.0",
@@ -54,6 +58,7 @@
     "inquirer": "^9.2.12",
     "inquirer-autocomplete-prompt": "^3.0.1",
     "json-schema-to-zod": "^2.6.1",
+    "langfuse-vercel": "^3.38.6",
     "ora": "^8.0.1",
     "picocolors": "^1.1.1",
     "pino": "^9.11.0",
