--- a/biome.json
+++ b/biome.json
@@ -72,6 +72,9 @@
       },
       "security": {
         "noDangerouslySetInnerHtml": "off"
+      },
+      "nursery": {
+        "noReactForwardRef": "error"
       }
     }
   },
