clarify-prod-env

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -20,11 +20,11 @@ SIGNOZ_API_KEY=
 # PRODUCTION ENVIRONMENT VARIABLES
 ############################################################
 
-# Create each of these with (openssl rand -hex 32)
+# Uncomment and set each of these with (openssl rand -hex 32)
 # INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET=
 # INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
 
-# Production Environment Variables for Manage UI at http://<vm_external_ip>:3000
+# Uncomment and set these for the Manage UI at http://<vm_external_ip>:3000
 # PUBLIC_INKEEP_AGENTS_MANAGE_API_URL=http://<vm_external_ip>:3002
 # PUBLIC_INKEEP_AGENTS_RUN_API_URL=http://<vm_external_ip>:3003
 # PUBLIC_INKEEP_AGENTS_RUN_API_BYPASS_SECRET=<copy INKEEP_AGENTS_RUN_API_BYPASS_SECRET>
@@ -32,6 +32,6 @@ SIGNOZ_API_KEY=
 # PUBLIC_NANGO_CONNECT_BASE_URL=http://<vm_external_ip>:3051
 # PUBLIC_SIGNOZ_URL=http://<vm_external_ip>:3080
 
-# Modify these in production environments!
+# Uncomment and set these to access Manage UI at http://<vm_external_ip>:3000
 # INKEEP_AGENTS_MANAGE_UI_USERNAME=admin@example.com
 # INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
