--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "biome check --write",
     "format": "biome format --write",
     "format:check": "biome format",
+    "typecheck": "next typegen && tsc --noEmit",
     "postinstall": "fumadocs-mdx",
     "generate-openapi": "node scripts/generate-openapi-docs.mjs",
     "validate-link": "node scripts/validate-link.mjs"
